// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsOrAccordionSection Accordion default to name if title is null 1`] = `
<div>
  <div
    class="Section-root-106 Section-white-110"
  >
    <div
      class="Container-root-114"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-113 Typography-root-116 Typography-underline-118 MuiTypography-h2"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root Typography-root-116 MuiTypography-body1"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class="Accordion-root-124"
          >
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-125 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="false"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-128"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"name\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-130"
                >
                  <h3
                    class="MuiTypography-root Typography-root-116 MuiTypography-h6"
                    data-testid="typography"
                  >
                    name
                  </h3>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-hidden"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root Accordion-details-126 Accordion-details-134"
                      >
                        <div
                          class="RichText-root-135"
                        >
                          <p
                            class="MuiTypography-root Typography-root-116 MuiTypography-body1 MuiTypography-gutterBottom"
                            data-testid="typography"
                          >
                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection Accordion renders Correctly  1`] = `
<div>
  <div
    class="Section-root-1 Section-white-5"
  >
    <div
      class="Container-root-9"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-8 Typography-root-11 Typography-underline-13 MuiTypography-h2"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root Typography-root-11 MuiTypography-body1"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class="Accordion-root-19"
          >
            <div
              class="MuiPaper-root MuiAccordion-root Accordion-item-20 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="false"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-23"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"hello\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent-25"
                >
                  <h3
                    class="MuiTypography-root Typography-root-11 MuiTypography-h6"
                    data-testid="typography"
                  >
                    hello
                  </h3>
                </div>
                <div
                  aria-disabled="false"
                  aria-hidden="true"
                  class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-hidden"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root Accordion-details-21 Accordion-details-29"
                      >
                        <div
                          class="RichText-root-30"
                        >
                          <p
                            class="MuiTypography-root Typography-root-11 MuiTypography-body1 MuiTypography-gutterBottom"
                            data-testid="typography"
                          >
                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection Tabs default to name if title is null 1`] = `
<div>
  <div
    class="Section-root-69 Section-pearl-72"
  >
    <div
      class="Container-root-77"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-76 Typography-root-79 Typography-underline-81 MuiTypography-h2"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root Typography-root-79 MuiTypography-body1"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class="Tabs-root-87"
          >
            <div
              class="Tabs-TabsBar-93"
            >
              <div
                class="Container-root-77"
              >
                <div
                  class="MuiContainer-root Tabs-ContainerRoot-88 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root Tabs-TabsRoot-89"
                  >
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-name"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-90 Mui-selected"
                          data-gtm="{\\"id\\":\\"selector-tabs2\\",\\"label\\":\\"name\\",\\"action\\":\\"Selector – Tabs\\"}"
                          data-testid="tab-name"
                          id="tab-name"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            name
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-97 PrivateTabIndicator-colorPrimary-98 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-name"
              class="MuiGrid-root Tabs-TabPanel-91 MuiGrid-item"
              data-testid="tabpanel-name"
              heading="name"
              id="tabpanel-name"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-103 Tabs-TabPanelBox-92"
              >
                <div
                  class="RichText-root-104"
                >
                  <p
                    class="MuiTypography-root Typography-root-79 MuiTypography-body1 MuiTypography-gutterBottom"
                    data-testid="typography"
                  >
                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection Tabs renders Correctly  1`] = `
<div>
  <div
    class="Section-root-32 Section-pearl-35"
  >
    <div
      class="Container-root-40"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-39 Typography-root-42 Typography-underline-44 MuiTypography-h2"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root Typography-root-42 MuiTypography-body1"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class="Tabs-root-50"
          >
            <div
              class="Tabs-TabsBar-56"
            >
              <div
                class="Container-root-40"
              >
                <div
                  class="MuiContainer-root Tabs-ContainerRoot-51 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root Tabs-TabsRoot-52"
                  >
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-hello"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-53 Mui-selected"
                          data-gtm="{\\"id\\":\\"selector-tabs2\\",\\"label\\":\\"hello\\",\\"action\\":\\"Selector – Tabs\\"}"
                          data-testid="tab-hello"
                          id="tab-hello"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            hello
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-60 PrivateTabIndicator-colorPrimary-61 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-hello"
              class="MuiGrid-root Tabs-TabPanel-54 MuiGrid-item"
              data-testid="tabpanel-hello"
              heading="hello"
              id="tabpanel-hello"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-66 Tabs-TabPanelBox-55"
              >
                <div
                  class="RichText-root-67"
                >
                  <p
                    class="MuiTypography-root Typography-root-42 MuiTypography-body1 MuiTypography-gutterBottom"
                    data-testid="typography"
                  >
                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection not render tab panel if item array is empty 1`] = `
<div>
  <div
    class="Section-root-174 Section-pearl-177"
  >
    <div
      class="Container-root-182"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-181 Typography-root-184 Typography-underline-186 MuiTypography-h2"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root Typography-root-184 MuiTypography-body1"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class="Tabs-root-192"
          >
            <div
              class="Tabs-TabsBar-198"
            >
              <div
                class="Container-root-182"
              >
                <div
                  class="MuiContainer-root Tabs-ContainerRoot-193 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root Tabs-TabsRoot-194"
                  >
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      />
                      <span
                        class="PrivateTabIndicator-root-202 PrivateTabIndicator-colorPrimary-203 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsOrAccordionSection title attribute is rendered if both name and title exists for tab panels 1`] = `
<div>
  <div
    class="Section-root-137 Section-pearl-140"
  >
    <div
      class="Container-root-145"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-144 Typography-root-147 Typography-underline-149 MuiTypography-h2"
          data-testid="typography"
        >
          string
        </h2>
        <p
          class="MuiTypography-root Typography-root-147 MuiTypography-body1"
          data-testid="typography"
        >
          string
        </p>
        <div
          style="margin-top: 40px;"
        >
          <div
            class="Tabs-root-155"
          >
            <div
              class="Tabs-TabsBar-161"
            >
              <div
                class="Container-root-145"
              >
                <div
                  class="MuiContainer-root Tabs-ContainerRoot-156 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root Tabs-TabsRoot-157"
                  >
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-title"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-158 Mui-selected"
                          data-gtm="{\\"id\\":\\"selector-tabs2\\",\\"label\\":\\"title\\",\\"action\\":\\"Selector – Tabs\\"}"
                          data-testid="tab-title"
                          id="tab-title"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            title
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-165 PrivateTabIndicator-colorPrimary-166 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-title"
              class="MuiGrid-root Tabs-TabPanel-159 MuiGrid-item"
              data-testid="tabpanel-title"
              heading="title"
              id="tabpanel-title"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-171 Tabs-TabPanelBox-160"
              >
                <div
                  class="RichText-root-172"
                >
                  <p
                    class="MuiTypography-root Typography-root-147 MuiTypography-body1 MuiTypography-gutterBottom"
                    data-testid="typography"
                  >
                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
